<resources>
    <string name="app_name">CBT Patient Guide</string>
    <string name="title_activity_add_entry">Add an Entry</string>
    <string name="title_activity_analyze_entry">Analyze an Entry</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_delete">Delete all data</string>
    <string name="action_reminder">Reminder time</string>
    <string name="action_read">Read about this</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="welcome_message">Welcome to</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_view_entries">ViewEntriesActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="discard">Discard</string>
    <string name="cancel">Cancel</string>
    <string name="discardConfirmMsg">Continue the entry in progress or start a new one?</string>
    <string name="situationQuestion">Where did it take place?</string>
    <string name="conversationQuestion">Who else was involved?</string>
    <string name="ok">OK</string>
    <string name="deleteConfirm">Delete last entered emotion?</string>
    <string name="continueButton">Continue</string>
    <string name="newEntryButton">Start new</string>
    <string name="thoughtsQuestion">What were you thinking that led you to feel that way?</string>
    <string name="thoughtsHint">Add your thoughts here. Please write only thoughts you had at that time, not what you think about it now.</string>
    <string name="assumptionsQuestion">Now take a minute and ask yourself, \"What assumptions/beliefs might I have about myself or others that may have influenced how I thought and felt %1$s?\"</string>
    <string name="assumptionsReadMoreHeading">Assumptions</string>
    <string name="assumptionsReadMore">We all have basic assumptions about ourselves, whether positive or negative. These are things like “I am unloveable”, “I am safe”, “I am attractive” or “I am stupid”. These assumptions are deep core beliefs that we often don’t even realize we have about ourselves. They are general and not specific to just one situation or conversation, but they do influence the way we think in our day-to-day interactions.\n\nFor example, Mary feels vulnerable in many different situations (even in non-dangerous situations). She does not realize that this feeling comes from her core assumptions “I am easily victimized” and “I am unworthy of protection”.\n\nRather than a well-formed thought, core assumptions are instead more like a feeling or a general sense we have about ourselves.</string>
    <string name="expressionQuestion">What did you do and say that showed the emotions you felt?</string>
    <string name="expressionHint">For example, “I cried”, or “I yelled at…”</string>
    <string name="relationshipsQuestion">How did your behavior (the way you showed your emotions) affect other people? How did they respond to what you said and did?</string>
    <string name="relationshipsQuestionBottled">How did the way you hid your emotions affect other people?</string>
    <string name="relationshipsHint"></string>
    <string name="validityIntro1">Please answer the following questions about these thoughts. No one will see your answers except you, so be as honest as you can.</string>
    <string name="validityIntro2">You wrote that your thoughts were:</string>
    <string name="validityQuestion1">Were these thoughts mistaken? In other words, did you misunderstand or misperceive what really happened or what he/she actually meant?</string>
    <string name="validityAnswer1A">I misunderstood what actually happened.</string>
    <string name="validityAnswer1B">I misunderstood what he/she said.</string>
    <string name="validityAnswer1C">I accurately understood what happened / what was said.</string>
    <string name="validityQuestion2">Were these thoughts based on facts, or did they stem from the mood you were in and how you were feeling at the time?</string>
    <string name="validityAnswer2A">My thoughts came from the facts of the situation.</string>
    <string name="validityAnswer2B">My thoughts came from my emotions/mood at the time.</string>
    <string name="validityQuestion3">Think back for a moment:\n\nWhat evidence is there that these thoughts were true?\n\nWhat evidence is there that these thoughts were not true?\n\nThen ask yourself if you made any of the following thinking errors (check all that apply).</string>
    <string name="validityAnswer3A">I exaggerated in my mind how bad things actually were. I blew it out of proportion.</string>
    <string name="validityAnswer3B">I exaggerated in my mind how good things actually were. I made a bigger deal out it than it really deserved.</string>
    <string name="validityAnswer3C">I minimized, downplayed, or ignored things as they actually were. I made a smaller deal out it than it really deserved.</string>
    <string name="validityAnswer3D">I acted as if I knew for certain what was going to happen (i.e. fortune-telling).</string>
    <string name="validityAnswer3E">My assumptions were overly broad and not specific to the facts of this situation.</string>
    <string name="validityAnswer3F">I assumed that because it could happen, it would happen.</string>
    <string name="validityAnswer3G">None of these apply.</string>
    <string name="validityQuestion4">Did you make assumptions about someone’s intentions, thoughts, or beliefs?</string>
    <string name="validityAnswer4A">Yes, I reacted to what I assumed he/she was thinking or feeling. I was mind reading.</string>
    <string name="validityAnswer4B">No, I reacted to what he/she actually said, did, or meant.</string>
    <string name="validityQuestion5">Were these thoughts biased?</string>
    <string name="validityAnswer5A">Yes, I only paid attention to those facts that confirmed what I already believed (or what I wanted to believe).</string>
    <string name="validityAnswer5B">Yes, my general opinions and views swayed or skewed how I understood the facts of this specific situation.</string>
    <string name="validitySummary1Irrational">It appears that your thoughts about this %1$s were probably irrational. Good job identifying the “bad apples” that got through.</string>
    <string name="validitySummary3Irrational">Having thinking errors means there is room to improve your emotional health. Let’s explore how this can happen. First, let’s try replacing your irrational thoughts with a more rational way of thinking.</string>
    <string name="validitySummary5Irrational">Let’s explore how you could have been healthier. Let’s first try replace the irrational thoughts that you had with a more rational way of thinking.</string>
    <string name="imaginedFuture1">You now know what you could have thought instead, and how it would have led to more emotionally healthy outcomes. Good job.\n\nBefore we move on let’s apply this new knowledge to your future. We’ve looked at what happened in the past, so now let’s have you practice in your mind a time in the future when this kind of healthier thinking will be beneficial for you. Follow these steps:</string>
    <string name="imaginedFuture2">1. Find a place where you can safely close your eyes (for example, don’t do this while you’re driving).</string>
    <string name="imaginedFuture4">3. See yourself reacting the same way you did originally, but this time imagine yourself noticing your thinking errors before the scene ends. You recognize the bad apples and reject them.</string>
    <string name="imaginedFuture5">4. Imagine yourself during that %1$s believing something like:</string>
    <string name="imaginedFuture6">6. Notice how these healthier thoughts change the way you feel. You might feel a different emotion, or maybe the same one just less intensely.</string>
    <string name="imaginedFuture7">7. Before you open your eyes, take a deep breath and mentally pat yourself on the back for handling the situation differently this time (at least in your imagination). </string>
    <string name="imaginedFuture8">Visualizing like this in your mind is how to make imagination become reality. For example, professional athletes often practice by first envisioning themselves nailing their routine or hitting a homerun before they actually practice in reality. You can do the same. Feel free to "practice" rejecting bad apples as often as you would like.</string>
    <string name="begin_test">Begin Test</string>
    <string name="begin_behavior_validity_test">Examine Behavior Validity</string>
    <string name="rational">Rational</string>
    <string name="irrational">Irrational</string>
    <string name="behaviorAnalogy1">To go farther with our analogy of the apples, let’s imagine that you are at a local farmer’s market and you are trying to sell your homemade apple juice. An advertising sign on your table shows the price, nutrition information, and other important details that help passers by decide whether they want to do business with you or not.</string>
    <string name="behaviorAnalogy2">In this part of the analogy:</string>
    <string name="behaviorAnalogy3">When our behavior is emotionally healthy we call it rational. Rational behavior makes it easier for us to be loved by, cared for, and connected to others; however, irrational behavior (like a false advertising sign at the farmer’s market) makes people not want to connect to us emotionally. </string>
    <string name="behaviorAnalogy4">It can be helpful to “quality check” your behavior (the way you displayed your emotion) to help improve your relationships. </string>
    <string name="behaviorAnalogy5">Let’s review your behavior and look for “false advertising”.</string>
    <string name="behaviorIntro1">You noted that you originally felt:</string>
    <string name="behaviorIntro2">When asked how you expressed this emotion you wrote:</string>
    <string name="behaviorPrompt">Please answer the following questions about your words and actions. No one will see your answers except you, so be as honest as you can.</string>
    <string name="begin_replacement_thoughts">Examine replacement thoughts</string>
    <string name="continue_replacement_thoughts">Continue replacement thoughts test</string>
    <string name="apples_metaphor_1">Imagine that you work in an apple juice factory. Your job is to inspect the apples as they move from the truck across a conveyor belt into the juicing machine. You examine them and remove any rotten ones to prevent them from making it into the machine and souring the juice.</string>
    <string name="apples_metaphor_2">This is an analogy of how we can learn to “quality check” our thoughts:</string>
    <string name="apples_metaphor_3">We all occasionally have thoughts cross our minds which are irrational or untrue (bad apples). If we don’t quality-check and replace these irrational thoughts then we allow them to sour our emotional health.</string>
    <string name="check_for_apples">Let’s review your thoughts and check for any “bad apples”.</string>
</resources>