<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mozzarelly.cbthelper.MainActivity">
    <item
        android:id="@+id/action_reminder"
        android:orderInCategory="1"
        android:icon="@drawable/ic_bell"
        android:iconTint="@color/colorOnBackground"
        android:title="@string/action_reminder"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="90"
        android:title="@string/action_settings"
        app:showAsAction="never" />
   <!-- <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="never" />-->
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>