<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView style="@style/TextViewHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="An analogy"
            android:gravity="center"
            android:textSize="26sp"
            tools:ignore="HardcodedText"
        />

        <TextView style="@style/TextViewHeading"
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/behaviorAnalogy1"
            tools:ignore="HardcodedText"
            />

        <TextView style="@style/TextViewHeading"
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/behaviorAnalogy2"
            tools:ignore="HardcodedText"
            />

        <TextView style="@style/TextViewHeading"
            android:id="@+id/textBullets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText"
            />


        <TextView style="@style/TextViewHeading"
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/behaviorAnalogy3"
            tools:ignore="HardcodedText"
            />

        <TextView style="@style/TextViewHeading"
            android:id="@+id/text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/behaviorAnalogy4"
            tools:ignore="HardcodedText"
            />

        <TextView style="@style/TextViewHeading"
            android:id="@+id/text5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/behaviorAnalogy5"
            tools:ignore="HardcodedText"
            />

        <Button android:theme="@style/ButtonStyle"
            android:id="@+id/beginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/begin_behavior_validity_test"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            />

        <TextView style="@style/TextViewHeading"
            android:id="@+id/skipInvitation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:text="Or you can skip this test because you already know that your behavior was..."
            tools:ignore="HardcodedText"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

        <Button android:theme="@style/ButtonStyle"
            android:id="@+id/skipRationalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/rational"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            tools:ignore="ButtonStyle" />

        <Button android:theme="@style/ButtonStyle"
            android:id="@+id/skipIrrationalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/irrational"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            tools:ignore="ButtonStyle" />
        </LinearLayout>

</LinearLayout>
</ScrollView>