<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <LinearLayout
            android:id="@+id/content"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView style="@style/TextViewHeading"
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imaginedFuture1"
                tools:ignore="HardcodedText" />

            <TextView style="@style/TextViewHeading"
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imaginedFuture2"
                tools:ignore="HardcodedText" />

            <TextView style="@style/TextViewHeading"
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText"
                />

            <TextView style="@style/TextViewHeading"
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/situationType"
                android:text="@string/imaginedFuture4"
                tools:ignore="HardcodedText" />

            <TextView style="@style/TextViewHeading"
                android:id="@+id/text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/situationType"
                android:text="@string/imaginedFuture5"
                tools:ignore="HardcodedText" />

            <TextView style="@style/TextViewDatum"
                android:id="@+id/replacementThoughts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                tools:ignore="HardcodedText"
                tools:text="Good thoughts" />

            <TextView style="@style/TextViewHeading"
                android:id="@+id/text6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/situationType"
                android:text="@string/imaginedFuture6"
                tools:ignore="HardcodedText" />

            <TextView style="@style/TextViewHeading"
                android:id="@+id/text7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/situationType"
                android:text="@string/imaginedFuture7"
                tools:ignore="HardcodedText" />

            <TextView style="@style/TextViewHeading"
                android:id="@+id/text8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/situationType"
                android:text="@string/imaginedFuture8"
                tools:ignore="HardcodedText" />

            <Button android:theme="@style/ButtonStyle"
                android:id="@+id/finishButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:text="Next"
                />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>