<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cognition Validity"
            android:paddingBottom="8dp"
            android:gravity="center"
            android:textSize="26sp"
            android:background="@drawable/bottom_border"
            tools:ignore="HardcodedText"
            />

        <Button android:theme="@style/ButtonStyle"
            android:id="@+id/continueRationalButton"
            android:layout_width="wrap_content"
            android:minWidth="128dp"
            android:layout_height="wrap_content"
            android:text="@string/continue_replacement_thoughts"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            />

        <TextView style="@style/TextViewHeading"
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/validitySummary1Irrational"
            />

        <TextView style="@style/TextViewDatumCalculated"
            android:id="@+id/errors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Overshoulding"
            />

        <TextView style="@style/TextViewHeading"
            android:id="@+id/judgment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/validitySummary3Irrational"
            />

        <TextView style="@style/TextViewHeading"
            android:id="@+id/text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/validitySummary5Irrational"
            />

        <Button android:theme="@style/ButtonStyle"
            android:id="@+id/readMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Read more about this"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            tools:ignore="HardcodedText"
            />

       <Button android:theme="@style/ButtonStyle"
            android:id="@+id/beginRatRepButton"
            android:layout_width="wrap_content"
            android:minWidth="128dp"
            android:layout_height="wrap_content"
            android:text="@string/begin_replacement_thoughts"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
        />

        <Button android:theme="@style/ButtonStyle"
            android:id="@+id/beginBehaviorButton"
            android:layout_width="wrap_content"
            android:minWidth="128dp"
            android:layout_height="wrap_content"
            android:text="@string/begin_behavior_validity_test"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            />


    </LinearLayout>
</ScrollView>